@@ -121,6 +121,14 @@ namespace Magick
     void fontPointsize(double pointSize_);
     double fontPointsize(void) const;
 
+    // Font style
+    void fontStyle(const StyleType style_);
+    StyleType fontStyle(void) const;
+
+    // Font weight
+    void fontWeight(const size_t weight_);
+    size_t fontWeight(void) const;
+
     std::string format(void) const;
 
     // Image interlace scheme
@@ -264,6 +272,10 @@ namespace Magick
     void textKerning(double kerning_);
     double textKerning(void) const;
 
+    // Text undercolor box
+    void textUnderColor(const Color &underColor_);
+    Color textUnderColor(void) const;
+
     void tileName(const std::string &tileName_);
     std::string tileName(void) const;
 
@@ -321,6 +333,10 @@ namespace Magick
 
     // Assignment not supported
     Options& operator=(const Options&);
+
+    void setOption(const char *name,const Color &value_);
+
+    void setOption(const char *name,const double value_);
 
     MagickCore::ImageInfo    *_imageInfo;
     MagickCore::QuantizeInfo *_quantizeInfo;
